--- a/com.webproject/pom.xml
+++ b/com.webproject/pom.xml
@@ -3,8 +3,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>ch.x42.osgi</groupId>
-    <artifactId>osgi-for-mere-mortals-reactor</artifactId>
+    <groupId>com.intellizones.gateway</groupId>
+    <artifactId>osgi-fw-reactor</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.webproject</groupId>
@@ -24,7 +24,13 @@
       <scope>test</scope>
     </dependency>
         <dependency>
-            <groupId>ch.x42.osgi</groupId>
+  			<groupId>org.myosgi</groupId>
+  			<artifactId>myosgi</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.intellizones.gateway</groupId>
             <artifactId>osgi-fw-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>provided</scope>
@@ -97,9 +103,10 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
-						<Bundle-Activator>org.com.webproject.Activator</Bundle-Activator>                        
-                        <Private-Package>org.com.webproject.*</Private-Package>
+						<Bundle-Activator>com.intellizones.gateway.webproject.Activator</Bundle-Activator>												
+                        <Private-Package>com.intellizones.gateway.webproject.*</Private-Package>
                         <Export-Package>!*</Export-Package>
+                        <Embed-Dependency>dependencies</Embed-Dependency>
                         <Embed-Dependency>commons-io</Embed-Dependency>
                     </instructions>
                 </configuration>
