--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,12 +13,12 @@
         <relativePath />
     </parent>
 
-    <groupId>ch.x42.osgi</groupId>
+    <groupId>com.intellizones.gateway</groupId>
     <artifactId>osgi-fw-core</artifactId>
     <packaging>bundle</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>OSGi for mere mortals - Core Bundle</name>
+    <name>OSGi IntelliZones Bundle</name>
     <inceptionYear>2011</inceptionYear>
 
     <prerequisites>
@@ -37,7 +37,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
-                        <Private-Package>ch.x42.osgi.samples.osgi101.core.*</Private-Package>
+                        <Private-Package>com.intellizonex.gateway.core.*</Private-Package>
                     </instructions>
                 </configuration>
             </plugin>
