--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -13,12 +13,12 @@
         <relativePath />
     </parent>
 
-    <groupId>ch.x42.osgi</groupId>
+    <groupId>com.intellizones.gateway</groupId>
     <artifactId>osgi-fw-launcher</artifactId>
     <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>OSGi for mere mortals - Launcher</name>
+    <name>OSGi IntelliZones Launcher</name>
     <inceptionYear>2011</inceptionYear>
 
     <prerequisites>
@@ -33,7 +33,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ch.x42.osgi.samples.osgi101.bootstrap.OsgiBootstrap</mainClass>
+                            <mainClass>com.intellizones.gateway.webdriver.bootstrap.IntellizonesBootstrap</mainClass>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                     </archive>
@@ -122,11 +122,11 @@
                                     <version>1.0.4</version>
                                 </artifactItem>                                
                                 <artifactItem>
-                                    <groupId>ch.x42.osgi</groupId>
+                                    <groupId>com.intellizones.gateway</groupId>
                                     <artifactId>osgi-fw-core</artifactId>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>ch.x42.osgi</groupId>
+                                    <groupId>com.intellizones.gateway</groupId>
                                     <artifactId>osgi-fw-app</artifactId>
                                 </artifactItem>
                             </artifactItems>
@@ -148,12 +148,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>ch.x42.osgi</groupId>
+                <groupId>com.intellizones.gateway</groupId>
                 <artifactId>osgi-fw-core</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>ch.x42.osgi</groupId>
+                <groupId>com.intellizones.gateway</groupId>
                 <artifactId>osgi-fw-app</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
@@ -194,12 +194,12 @@
             <version>1.6.2</version>
         </dependency>
         <dependency>
-            <groupId>ch.x42.osgi</groupId>
+            <groupId>com.intellizones.gateway</groupId>
             <artifactId>osgi-fw-core</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>ch.x42.osgi</groupId>
+            <groupId>com.intellizones.gateway</groupId>
             <artifactId>osgi-fw-app</artifactId>
             <scope>provided</scope>
         </dependency>
