--- a/com.webproject/pom.xml
+++ b/com.webproject/pom.xml
@@ -17,12 +17,22 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+	<dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.2</version>
+	</dependency>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+    </dependency><dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.3.1</version>
+</dependency>
         <dependency>
   			<groupId>org.myosgi</groupId>
   			<artifactId>myosgi</artifactId>
@@ -107,7 +117,7 @@
                         <Private-Package>com.intellizones.gateway.webproject.*</Private-Package>
                         <Export-Package>!*</Export-Package>
                         <Embed-Dependency>dependencies</Embed-Dependency>
-                        <Embed-Dependency>commons-io</Embed-Dependency>
+                        <Embed-Dependency>commons-io,gson,commons-lang</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
