Adding code for login and other screens

--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,6 @@
         <module>core</module>
 		<module>myosgi</module>
 		<module>com.wabapp</module>
+    <module>com.dataparsers</module>
   </modules>
 </project>
