--- a/com.datastoremanager/pom.xml
+++ b/com.datastoremanager/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>osgi-fw-reactor</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.dataparsers</groupId>
-  <artifactId>com.dataparsers</artifactId>
+  <groupId>com.datastoremanager</groupId>
+  <artifactId>com.datastoremanager</artifactId>
   <packaging>bundle</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>myosgi</name>
@@ -23,6 +23,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.3.1</version>
+</dependency>
+    
         <dependency>
             <groupId>com.intellizones.gateway</groupId>
             <artifactId>osgi-fw-core</artifactId>
@@ -70,6 +77,7 @@
                         <Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Activator>org.myosgi.MyActivator</Bundle-Activator>												                      
                         <Export-Package>org.myosgi.*</Export-Package>
+						<Embed-Dependency>gson</Embed-Dependency>                        
                     </instructions>
                 </configuration>
             </plugin>
