--- a/com.datastoremanager/pom.xml
+++ b/com.datastoremanager/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>com.datastoremanager</artifactId>
   <packaging>bundle</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>myosgi</name>
+  <name>com.datastoremanager</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,31 +23,35 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
+        <dependency>
+  			<groupId>com.dataobjects</groupId>
+  			<artifactId>com.dataobjects</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+        </dependency>    
 <dependency>
 	<groupId>com.google.code.gson</groupId>
 	<artifactId>gson</artifactId>
 	<version>2.3.1</version>
 </dependency>
-
 <dependency>
-	<groupId>com.webproject</groupId>
-	<artifactId>com.webproject</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-</dependency>
-    
-        <dependency>
             <groupId>com.intellizones.gateway</groupId>
             <artifactId>osgi-fw-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
+</dependency>
+<dependency>
+            <groupId>com.datahandler</groupId>
+            <artifactId>com.datahandler</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+</dependency>
+<dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>4.2.0</version>
             <scope>provided</scope>
-        </dependency>
+</dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
@@ -81,10 +85,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
-						<Bundle-Activator>org.myosgi.MyActivator</Bundle-Activator>												                      
-                        <Import-Package>com.intellizones.gateway.webproject.dto</Import-Package>
-                        <Export-Package>org.myosgi.*</Export-Package>
-						<Embed-Dependency>gson</Embed-Dependency>                        
+						<Bundle-Activator>com.intellizones.gateway.datastoremanager.DataStoreManagerActivator</Bundle-Activator>												                      
+						<Export-Package>com.intellizones.gateway.datastoremanager.*</Export-Package>
+						<Embed-Dependency>gson,com.dataobjects,com.datahandler</Embed-Dependency>                        
                     </instructions>
                 </configuration>
             </plugin>
