--- a/com.webproject/pom.xml
+++ b/com.webproject/pom.xml
@@ -22,7 +22,6 @@
 		<artifactId>commons-lang</artifactId>
 		<version>2.2</version>
 	</dependency>
-  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -33,6 +32,36 @@
 	<artifactId>gson</artifactId>
 	<version>2.3.1</version>
 </dependency>
+<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20140107</version>
+</dependency>
+        <dependency>
+  			<groupId>com.datastoremanager</groupId>
+  			<artifactId>com.datastoremanager</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+        </dependency>
+<dependency>
+            <groupId>com.datahandler</groupId>
+            <artifactId>com.datahandler</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+</dependency>        
+        <dependency>
+  			<groupId>com.dataobjects</groupId>
+  			<artifactId>com.dataobjects</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+        </dependency>
+        <dependency>
+  			<groupId>com.jsonhandler</groupId>
+  			<artifactId>com.jsonhandler</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+        </dependency>
+        
         <dependency>
   			<groupId>org.myosgi</groupId>
   			<artifactId>myosgi</artifactId>
@@ -115,10 +144,8 @@
                         <Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Activator>com.intellizones.gateway.webproject.Activator</Bundle-Activator>												
 						<Private-Package>com.intellizones.gateway.webproject.*</Private-Package>
-                        <!-- <Export-Package>!*</Export-Package>-->
                         <Export-Package>com.intellizones.gateway.webproject.dto</Export-Package>
-                        <Embed-Dependency>dependencies</Embed-Dependency>
-                        <Embed-Dependency>commons-io,gson,commons-lang</Embed-Dependency>
+                        <Embed-Dependency>commons-io,gson,commons-lang,com.dataobjects,com.datastoremanager,com.jsonhandler,com.datahandler,json</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
