--- a/com.datastoremanager/pom.xml
+++ b/com.datastoremanager/pom.xml
@@ -23,6 +23,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-lang3</artifactId>
+	<version>3.4</version>
+	<scope>provided</scope>
+</dependency>    
     <dependency>
 	<groupId>org.json</groupId>
 	<artifactId>json</artifactId>
@@ -92,7 +98,7 @@
                         <Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Activator>com.intellizones.gateway.datastoremanager.DataStoreManagerActivator</Bundle-Activator>												                      
 						<Export-Package>com.intellizones.gateway.datastoremanager.*</Export-Package>
-						<Embed-Dependency>gson,com.dataobjects,com.datahandler,json</Embed-Dependency>                        
+						<Embed-Dependency>gson,com.dataobjects,com.datahandler,json,commons-lang3</Embed-Dependency>                        
                     </instructions>
                 </configuration>
             </plugin>
