--- a/com.webproject/pom.xml
+++ b/com.webproject/pom.xml
@@ -22,6 +22,12 @@
 		<artifactId>commons-lang</artifactId>
 		<version>2.2</version>
 	</dependency>
+<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-lang3</artifactId>
+	<version>3.4</version>
+	<scope>provided</scope>
+</dependency>    	
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -145,7 +151,7 @@
 						<Bundle-Activator>com.intellizones.gateway.webproject.Activator</Bundle-Activator>												
 						<Private-Package>com.intellizones.gateway.webproject.*</Private-Package>
                         <Export-Package>com.intellizones.gateway.webproject.dto</Export-Package>
-                        <Embed-Dependency>commons-io,gson,commons-lang,com.dataobjects,com.datastoremanager,com.jsonhandler,com.datahandler,json</Embed-Dependency>
+                        <Embed-Dependency>commons-io,gson,commons-lang,com.dataobjects,com.datastoremanager,com.jsonhandler,com.datahandler,json,commons-lang3</Embed-Dependency>
                     </instructions>
                 </configuration>
             </plugin>
