Adding Few More Enhcancements

--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,6 @@
     <module>com.dataobjects</module>
     <module>com.datahandler</module>
     <module>com.remoteconnet</module>
+    <module>com.local.usbreader</module>
   </modules>
 </project>
